stylesheets/application.css
/* ... */
span.select2-container--default span.select2-selection--single{
  border-radius: 5px;
  height: 32px;
}

.approve, .submit, .hire, .convert_lead {
  background-color: #449d44 !important;
  ;
}

.reject, .cancel_leave {
  background-color: #c9372c !important;
}

.approve:hover, .submit:hover, .hire:hover, .convert_lead:hover {
  background-color: #388438 !important;
}

.reject:hover, .cancel_leave:hover {
  background-color: #bc2116 !important;
}

div.width33{
  width: 33%;
  min-width: 360px;
}

#quick-search #q {
  width: 156px;
}

#projects-index ul.projects div.root a.project, #projects-index a.project {
  font-family: Roboto, 'Fira Sans', Oxygen, 'Open Sans', Ubuntu, sans-serif;
  font-weight: 700;
  color: #0052CC
}

#projects-index a.project{
  font-weight: 500;
}

#quick-search input[type='text']{
  height: 32px;
}

td.hours a{
  margin-left: 5px;
}

td.icon-group{
  padding-left: 17px !important;
}

.gantt_subjects div > span.expander {
  padding-left: 17px;
}

svg {
  &.icon-svg {
    stroke: #016bff;
  }
}

#sidebar-switch-panel{
  display: none;
}

#sidebar h3, #sidebar {
  font-size: 14px;
}

a.icon:hover svg, a.icon-only:hover svg {
  stroke: #016bff;
}

#admin-menu svg {
  stroke: #44546f;
  width: 24px;
  height: 24px;
  stroke-width: 2.1px;
}

#admin-menu li.highlighted svg {
  stroke: #016bff;
  fill: none !important;
}

html>body .tabular p, table.list, .table-list {
  overflow: unset;
}

.splitcontent,
.ui-widget-content,
.ui-dialog .ui-dialog-content {
  overflow: visible;
}

.ui-widget-header {
  background-color:#f7f8f9;
}

html>body  {
  overflow: unset;
  line-height: inherit;
}

div.issue .attribute .value {
  overflow: hidden;
}

.tab-title {
  float: left;
  padding-top: 3px;
  padding-right: 3px;
  padding-left: 3px;
}

#main-menu .menu-title {
  text-align: center;
  padding: 10px 14px;
  border-block-end: 1px solid var(--ds-border, #c0c0c0);
  background: #c0d9ff;
}

